--- a/vignettes/fitting-a-glm-model.Rmd
+++ b/vignettes/fitting-a-glm-model.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
+title: "Fitting a GLM model using Stan"
+author: "Jacqueline Buros"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -9,50 +9,63 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+There are two ways to fit a GLM model using [Stan](https://mc-stan.org).
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+1. Use rstanarm::stan_glm
+2. Write the stan code for the model & fit using `rstan::fit`
 
-## Vignette Info
+We will work through both examples here.
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+## Using rstanarm
 
-## Styles
+First let's select a dataset to which we want to fit our model.
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+```{r get-data}
+data("mtcars")
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
+Let's decide on the model we want to estimate. For now we will fit a really generic model to predict `mpg`.
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r fit-model1}
+library(rstanarm)
+fit1 <- rstanarm::stan_glm(mpg / 10 ~ .,
+                          data = mtcars)
+print(fit1)
 ```
 
-Also a quote using `>`:
+We can modify the priors on the covariates, to enforce greater sparsity.
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+```{r fit-model2}
+fit2 <- rstanarm::stan_glm(mpg / 10 ~ .,
+                          data = mtcars,
+                          prior = cauchy(),
+                          adapt_delta = 0.999
+                          )
+print(fit2)
+```
+
+We can also [put a prior on `R2`](https://rdrr.io/cran/rstanarm/f/vignettes/lm.Rmd). This reflects our overall confidence in the ability of the model to explain our outcome.
+
+```{r fit-model3}
+fit3 <- rstanarm::stan_lm(mpg / 10 ~ .,
+                          data = mtcars,
+                          prior = R2(location = 0.3, what = 'mode'),
+                          adapt_delta = 0.999
+                          )
+print(fit3)
+```
+
+
+## evaluating posterior fits
+
+Now, let's assume these all sampled well & that we have good estimates for our parameters from the three fits.
+
+First thing we might want to do is compare these posterior estimates.
+
+```{r compare-fits}
+library(bayesplot)
+plot1 <- bayesplot::mcmc_areas(as.array(fit1), facet_args = list(ncol = 1), pars = c('cyl', 'wt'))
+plot2 <- bayesplot::mcmc_areas(as.array(fit2), facet_args = list(ncol = 1), pars = c('cyl', 'wt'))
+plot3 <- bayesplot::mcmc_areas(as.array(fit3), facet_args = list(ncol = 1), pars = c('cyl', 'wt'))
+gridExtra::grid.arrange(plot1, plot2, ncol = 2)
+```
