--- a/vignettes/analyze-tcga-melanoma.Rmd
+++ b/vignettes/analyze-tcga-melanoma.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
+title: "Analyze TCGA data for SKCM cohort"
+author: "Jacqueline Buros & ... "
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -9,50 +9,39 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+Here we are demonstrating the feasibility of analyzing genomic data using Stan. The first use case is to analyze somatic mutations for association with survival, after adjusting for key clinical variables with known prognostic status.
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
-
-## Vignette Info
-
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
-
-## Styles
-
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+```{r setup, include = F, warnings = F, echo = F}
+# library(SuMu)
+library(dplyr)
+library(survminer)
+library(survival)
+library(ggplot2)
+library(scales)
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
+## Clinical Data
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r load-clin}
+clin_df <- SuMu::get_tcga_clinical(cohort = "SKCM")
 ```
 
-Also a quote using `>`:
+### Review clinical data 
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+For this analysis we will consider the survival time in `r print(unique(clin_df$_OS_UNIT))` since initial pathologic diagnosis.  
+
+```{r plot-survival}
+fit <- survfit(Surv(`_OS`, `_OS_IND`) ~ 1,
+                  data = clin_df)
+survminer::ggsurvplot(fit) + 
+  ggtitle('Survival since diagnosis in full cohort')
+```
+
+Plotting by stage, although the time of 'stage' determination may be confounded if not collected at time of initial diagnosis.
+
+```{r plot-survival-by-stage}
+fit <- survfit(Surv(`_OS`, `_OS_IND`) ~ pathologic_stage,
+                  data = clin_df)
+survminer::ggsurvplot(fit)
+```
+
