--- a/vignettes/analyze-tcga-melanoma.Rmd
+++ b/vignettes/analyze-tcga-melanoma.Rmd
@@ -237,3 +237,10 @@ glmfit <- rstanarm::stan_glm(
   prior = rstanarm::hs_plus()
 )
 ```
+
+## Visualize 
+```{}
+summary_table=feature_table(glmfit)
+feature_graph(glmfit)
+view_feature(mutation_matrix,clin_df2,summary_table[1,1])
+```
